--- a/core/staticfiles/scss/theme/_home.scss
+++ b/core/staticfiles/scss/theme/_home.scss
@@ -558,7 +558,7 @@
 }
 
 .about-banner {
-   background:url(../img/top-banner.jpg) center;
+   background:url(../img/top-banner.jpg) center no-repeat;
    background-size:cover;
    .overlay-bg{
     background: rgba(#04091e,.40);
@@ -589,5 +589,3 @@
 
 
 /*-------- End Common Page Style   -------------*/
-
-
