--- a/core/templates/accounts/signup.html
+++ b/core/templates/accounts/signup.html
@@ -1,12 +1,14 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sing Up</title>
   <link rel="stylesheet" href="{% static 'css/accounts/signup.css' %}">
 </head>
+
 <body>
   <div class="login-box">
     <h2>Signup here u MF!</h2>
@@ -15,13 +17,19 @@
       <input type="email" name="email" placeholder="Email" required>
       <input type="password" name="password" placeholder="Password" required>
       <input type="password" name="password1" placeholder="Confirm Password" required>
+      {% if recaptcha_site_key and not request.user.is_authenticated %}
+      <div class="g-recaptcha" data-sitekey="{{ recaptcha_site_key }}"></div>
+      {% endif %}
       <button type="submit">Sign Up!</button>
     </form>
     <div id="signup-success" class="form-success" style="display:none;"></div>
     <div id="signup-errors" class="form-errors" style="display:none;"></div>
     <a href="{% url 'login' %}">Already have an account? Login</a>
   </div>
+  {% if recaptcha_site_key and not request.user.is_authenticated %}
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+  {% endif %}
   <script src="{% static 'js/accounts/signup.js' %}"></script>
 </body>
-</html>
 
+</html>
