--- a/core/templates/registration/login.html
+++ b/core/templates/registration/login.html
@@ -13,6 +13,9 @@
     <form method="post" action="{% url 'login' %}">
       {% csrf_token %}
       {{ form.as_p }}
+      {% if recaptcha_site_key and not request.user.is_authenticated %}
+      <div class="g-recaptcha" data-sitekey="{{ recaptcha_site_key }}"></div>
+      {% endif %}
       <div class="remember">
         <input type="checkbox" id="remember">
         <label for="remember">Remember Me</label>
@@ -21,5 +24,8 @@
       <a href="{% url 'password_reset' %}">Forgot Password?</a>
     </form>
   </div>
+  {% if recaptcha_site_key and not request.user.is_authenticated %}
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+  {% endif %}
 </body>
 </html>
