--- a/core/templates/registration/password_reset_form.html
+++ b/core/templates/registration/password_reset_form.html
@@ -14,9 +14,15 @@
     <form method="post" action="{% url 'password_reset' %}">
       {% csrf_token %}
       {{ form.as_p }}
+      {% if recaptcha_site_key and not request.user.is_authenticated %}
+      <div class="g-recaptcha" data-sitekey="{{ recaptcha_site_key }}"></div>
+      {% endif %}
       <button type="submit">Send Reset Link</button>
       <a href="{% url 'login' %}">Back to login</a>
     </form>
   </div>
+  {% if recaptcha_site_key and not request.user.is_authenticated %}
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+  {% endif %}
 </body>
 </html>
