--- a/core/templates/website/contact.html
+++ b/core/templates/website/contact.html
@@ -24,16 +24,17 @@
 <section class="contact-page-area section-gap">
 	<div class="container">
 		<div class="row">
-			<div class="map-wrap" style="width:100%; height: 445px;" id="map"></div>
+			<div class="map-wrap" style="width:100%; height: 445px;" id="map" data-lat="46.080565" data-lng="18.211856"
+				data-title="MIK PTE"></div>
 			<div class="col-lg-4 d-flex flex-column address-wrap">
 				<div class="single-contact-address d-flex flex-row">
 					<div class="icon">
 						<span class="lnr lnr-home"></span>
 					</div>
 					<div class="contact-details">
-						<h5>Binghamton, New York</h5>
+						<h5>Hungary,Pécs</h5>
 						<p>
-							4343 Hinkle Deegan Lake Road
+							Pécs, Boszorkány út 2, 7624
 						</p>
 					</div>
 				</div>
@@ -42,7 +43,7 @@
 						<span class="lnr lnr-phone-handset"></span>
 					</div>
 					<div class="contact-details">
-						<h5>00 (958) 9865 562</h5>
+						<h5>0672503650</h5>
 						<p>Mon to Fri 9am to 6 pm</p>
 					</div>
 				</div>
@@ -51,7 +52,7 @@
 						<span class="lnr lnr-envelope"></span>
 					</div>
 					<div class="contact-details">
-						<h5>support@colorlib.com</h5>
+						<h5>admin@admin.com</h5>
 						<p>Send us your query anytime!</p>
 					</div>
 				</div>
@@ -61,42 +62,62 @@
 					<div class="row">
 						{% csrf_token %}
 						<div class="col-lg-6 form-group">
+							{% if request.user.is_authenticated %}
+							<p class="contact-note">We will use your account name and email.</p>
+							{% else %}
 							<input name="name" placeholder="Enter your name" onfocus="this.placeholder = ''"
 								onblur="this.placeholder = 'Enter your name'" class="common-input mb-20 form-control"
-								required="" type="text">
+								required="" type="text" value="{{ form.name.value|default_if_none:'' }}">
 
 							<input name="email" placeholder="Enter email address"
 								pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$"
 								onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter email address'"
-								class="common-input mb-20 form-control" required="" type="email">
+								class="common-input mb-20 form-control" required="" type="email"
+								value="{{ form.email.value|default_if_none:'' }}">
+							{% endif %}
 
 							<input name="subject" placeholder="Enter subject" onfocus="this.placeholder = ''"
 								onblur="this.placeholder = 'Enter subject'" class="common-input mb-20 form-control"
-								required="" type="text">
+								required="" type="text" value="{{ form.subject.value|default_if_none:'' }}">
 						</div>
 						<div class="col-lg-6 form-group">
 							<textarea class="common-textarea form-control" name="message" placeholder="Enter Messege"
 								onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Messege'"
-								required=""></textarea>
+								required="">{{ form.message.value|default_if_none:'' }}</textarea>
 						</div>
 						<div class="col-lg-12">
-							<div class="alert-msg" style="text-align: left;"></div>
+							{% if recaptcha_site_key and not request.user.is_authenticated %}
+							<div class="g-recaptcha contact-recaptcha" data-sitekey="{{ recaptcha_site_key }}"></div>
+							{% endif %}
+							<div class="alert-msg" style="text-align: left;">
+								{% if form.errors %}
+								{% for field in form %}
+								{% for error in field.errors %}
+								<div>{{ error }}</div>
+								{% endfor %}
+								{% endfor %}
+								{% for error in form.non_field_errors %}
+								<div>{{ error }}</div>
+								{% endfor %}
+								{% endif %}
+								{% if messages %}
+								{% for message in messages %}
+								<div{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}
+							</div>
+							{% endfor %}
+							{% endif %}
+							</div>
 							<button type="submit" class="genric-btn primary" style="float: right;">Send Message</button>
 						</div>
-					</div>
-				</form>
 			</div>
-			{% if messages %}
-			<ul class="messages">
-				{% for message in messages %}
-				<li{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
-					{% endfor %}
-			</ul>
-			{% endif %}
+			</form>
 		</div>
+	</div>
 	</div>
 </section>
 <!-- End contact-page Area -->
 
-
+{% if recaptcha_site_key and not request.user.is_authenticated %}
+<script src="https://www.google.com/recaptcha/api.js" async defer></script>
+{% endif %}
 {% endblock %}
